# WinCETool

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h
